--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ header {
 .social-links {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     top: 0;
     margin-top: 3%;
     margin-left: 83%;
