--- a/design.css
+++ b/design.css
@@ -10,46 +10,101 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-color: #3b414c;
 }
 
-.content {
-    position: relative;
+header {
+    position: fixed;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    top: 0;
+    display: flex;
+    align-items: center;
+    padding: 0px 20px;
+    background-color: rgba(255, 255, 255, 0);
+    z-index: 1;
 }
 
-.background {
+.titre {
+    font-size: 1.4em;
+    color: rgb(255, 255, 255);
+    font-family: 'Dancing Script';
+}
+
+.background-image {
     width: 100%;
     height: 100%;
     object-fit: fill;
 }
 
-.restaurant-name {
-    font-family: 'Dancing Script', cursive;
-    font-size: 4em;
-    color: white;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-    margin-bottom: 200px;
-}
 
 
-.back-button {
-    padding: 10px 30px;
-    font-size: 20px;
-    font-family: Arial, sans-serif;
-    background-color: #3b414cc0;
-    color: white;
-    border: none;
-    border-radius: 30px; /* Ajoute un bord arrondi */
+
+
+
+.burger-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 22px;
     cursor: pointer;
-    transition: background-color 0.5s ease, transform 0.5s ease; /* Ajoute des transitions pour l'effet au survol */
-    position: relative; /* Permet de positionner le bouton */
+    margin: 20px;
     z-index: 100;
 }
 
-.back-button:hover {
+.burger-menu .line {
+    height: 4px;
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+}
+
+.menu-content {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 0;
+    height: 100vh;
+    background-color: #3B414C;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    z-index: 2;
+}
+
+.menu-content a {
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+
+.menu-content a:hover {
     background-color: #575d69;
-    transform: scale(2); /* Augmente légèrement la taille au survol */
+}
+
+.close-btn {
+    position: absolute;
+    top: 20px;
+    right: 25px;
+    font-size: 60px;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+.social-links img {
+    width: 30px;
+    height: 30px;
+    margin-bottom: 15%;
+}
+
+.social-links {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    margin-top: 3%;
+    margin-left: 91%;
+    z-index: 1;
 }
