--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,6 @@ header {
 }
 
 .menu-button:hover {
-    background-color: #575d69;
-    transform: scale(1.5); /* Augmente légèrement la taille au survol */
+    background-color: #3b414cc0;
+    transform: scale(1.2); /* Augmente légèrement la taille au survol */
 }
