--- a/design.css
+++ b/design.css
@@ -21,19 +21,21 @@ header {
     align-items: center;
     padding: 0px 20px;
     background-color: rgba(255, 255, 255, 0);
-    z-index: 1;
+    z-index: 2;
 }
 
 .titre {
     font-size: 1.4em;
     color: rgb(255, 255, 255);
     font-family: 'Dancing Script';
+    z-index: 1;
 }
 
 .background-image {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
+    z-index: 0;
 }
 
 .light-theme {
@@ -52,13 +54,13 @@ header {
     height: 22px;
     cursor: pointer;
     margin: 20px;
-    z-index: 100;
+    z-index: 2;
 }
 
 .burger-menu .line {
     height: 4px;
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 
 .menu-content {
@@ -101,6 +103,7 @@ header {
     width: 30px;
     height: 30px;
     margin-bottom: 15%;
+    z-index: 3;
 }
 
 .social-links {
@@ -110,7 +113,7 @@ header {
     top: 0;
     margin-top: 3%;
     margin-left: 91%;
-    z-index: 1;
+    z-index: 3;
 }
 
 
