--- a/design.css
+++ b/design.css
@@ -3,8 +3,8 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -17,7 +17,6 @@ body {
     width: 100%;
     height: 100%;
     object-fit: scale-down;
-    z-index: 0;
 }
 
 header {
@@ -55,24 +54,22 @@ header {
     margin-left: 15%;
 } 
 
-.burger-menu {
+#backButton{
     display: flex;
     position: absolute;
-    flex-direction: column;
-    justify-content: space-between;
     width: 30px;
-    height: 22px;
+    height: 40px;
     left: 0;
-    margin-top: 4%;
+    margin-top: 3%;
     margin-left: 4%;
 }
 
-.burger-menu .line {
+/* .burger-menu .line {
     height: 4px;
     width: 100%;
     background-color: rgb(255, 255, 255);
-}
-
+} */
+/* 
 .menu-content {
     position: fixed;
     top: 0;
@@ -107,12 +104,39 @@ header {
     font-size: 60px;
     color: rgb(0, 0, 0);
     cursor: pointer;
+} */
+
+.intro{
+    margin-bottom: 15vh;
 }
 
-#description-text {
+.intro::after{
+    content: '';
+    display:block;
+    border-bottom: 1.5px groove white;
+    
+}
+
+.intro, p{
+    color: #ffffff;
+    font-family: 'Roboto';
+    font-style: italic;
+    font-weight: 400;
+    text-align: center;
+    font-size: 18px;
+    padding: 20px;
+    line-height: 1.1;
+    word-spacing: 1px;
+}
+
+main{
+    height: 30vh;
+}
+
+/* #description-text{
     padding: 20px;
     font-size: 18px;
-    color: #e2e2e2;
+    color: #ffffff;
     text-align: center;
     font-family: 'Roboto';
     font-style: italic;
@@ -120,118 +144,12 @@ header {
     line-height: 1.1;
     text-align: center;
     word-spacing: 1px;
-    margin-bottom: 58%;
-}
-
-
-.product-container {
-    display: flex;
-    flex-wrap: wrap; /* Permet le retour à la ligne automatique */
-    gap: 20px; /* Espacement entre les cartes */
-    flex-direction: column;
-}
-
-.card {
-    background-color: white;
-    width: 385px;
-    height: 350px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 16px;
-    box-sizing: border-box;
-    margin: 16px;
-    left: 0;
-    padding: 16px;
     position: absolute;
-
-}
-
-.product-image {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 10px 10px 0 0;
-}
-
-.content {
-    flex-grow: 1;
-    padding: 16px 0;
-}
-
-.content h2 {
-    margin: 0 0 10px;
-    font-size: 20px;
-    color: #333;
-}
-
-.content p {
-    margin: 0;
-    font-size: 16px;
-    color: #666;
-}
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.allergen-dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 8px;
-    font-size: 14px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    border-radius: 4px;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-.allergen-dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.price {
-    font-size: 18px;
-    color: #333;
-}
-
-
+} */
 
 /* Styles pour les boutons */
 .button-container {
     text-align: center; /* Centrer les boutons horizontalement */
-    position: absolute;
-    margin-bottom: 10%;
 }
 
 .button-container button {
@@ -255,9 +173,52 @@ header {
     background-color: #a1a1a1; /* Couleur de fond verte plus foncée au survol */
 }
 
-.separator {
-    position: absolute;
-    margin-bottom: 30%;
-    font-size: 18px;
-    color: rgb(235, 235, 235);
+.product-container {
+    display: flex;
+    flex-wrap: wrap; /* Permet le retour à la ligne automatique */
+    gap: 20px; /* Espacement entre les cartes */
+    flex-direction: column;
 }
+
+.card {
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 10px;    
+    width: 38svh;
+    height: 36svh;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 16px;
+    left: 0;
+    padding: 16px;
+}
+
+.product-image {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px 10px 0 0;
+}
+
+.content {
+    padding: 16px 0;
+}
+
+.content h2 {
+    margin: 0 0 10px;
+    font-size: 20px;
+    color: #333;
+}
+
+.content p {
+    text-align: left;
+    font-size: 16px;
+    color: #666;
+}
+
+.price span{
+    font-size: 18px;
+    color: #333;
+    margin-left: 33vh;
+}
+
+
